...
              ),
            ),
            Padding(
              padding: const EdgeInsets.all(16.0),
              child: _buildGridItem(
                context,
                'Clinic Booking',
                Icons.local_hospital,
                '/appointment',
              ),
            ),
          ],
        ),
...
