...
        gravity: ToastGravity.BOTTOM,
      );
      return;
    }

    Fluttertoast.showToast(
      msg: "Appointment booked!",
      gravity: ToastGravity.BOTTOM,
      backgroundColor: Colors.green,
      textColor: Colors.white,
    );
print(FirebaseAuth.instance.currentUser!.uid);
    // Trigger the notification after booking
...
